src/eu/webtoolkit/jwt/render/Css22Parser.java
// Generated from Css22.g4 by ANTLR 4.7.2
package eu.webtoolkit.jwt.render;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Css22Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WSP=1, COMMENT=2, BADCOMMENT=3, CDO=4, CDC=5, INCLUDES=6, DASHMATCH=7, 
		STRING=8, BADSTRING=9, IDENT=10, HASH=11, IMPORT_SYM=12, PAGE_SYM=13, 
		MEDIA_SYM=14, CHARSET_SYM=15, IMPORTANT_SYM=16, EMS=17, EXS=18, LENGTH=19, 
		ANGLE=20, TIME=21, FREQ=22, DIMENSION=23, PERCENTAGE=24, NUMBER=25, URI=26, 
		BADURI=27, FUNCTION=28, ASTERISK=29, EQ=30, DOT=31, PLUS=32, GT=33, SLASH=34, 
		COMMA=35, COLON=36, SEMICOLON=37, LPAREN=38, RPAREN=39, LBRACE=40, RBRACE=41, 
		LBRACKET=42, RBRACKET=43;
	public static final int
		RULE_styleSheet = 0, RULE_importStmt = 1, RULE_media = 2, RULE_mediaList = 3, 
		RULE_medium = 4, RULE_page = 5, RULE_pseudoPage = 6, RULE_operator = 7, 
		RULE_combinator = 8, RULE_property = 9, RULE_ruleset = 10, RULE_declarationBlock = 11, 
		RULE_selector = 12, RULE_simpleSelector = 13, RULE_id = 14, RULE_className = 15, 
		RULE_elementName = 16, RULE_attrib = 17, RULE_pseudo = 18, RULE_declaration = 19, 
		RULE_prio = 20, RULE_expr = 21, RULE_term = 22, RULE_function = 23, RULE_hexcolor = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"styleSheet", "importStmt", "media", "mediaList", "medium", "page", "pseudoPage", 
			"operator", "combinator", "property", "ruleset", "declarationBlock", 
			"selector", "simpleSelector", "id", "className", "elementName", "attrib", 
			"pseudo", "declaration", "prio", "expr", "term", "function", "hexcolor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'<!--'", "'-->'", "'~='", "'|='", null, null, 
			null, null, null, null, null, "'@charset'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'*'", "'='", "'.'", 
			"'+'", "'>'", "'/'", "','", "':'", "';'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WSP", "COMMENT", "BADCOMMENT", "CDO", "CDC", "INCLUDES", "DASHMATCH", 
			"STRING", "BADSTRING", "IDENT", "HASH", "IMPORT_SYM", "PAGE_SYM", "MEDIA_SYM", 
			"CHARSET_SYM", "IMPORTANT_SYM", "EMS", "EXS", "LENGTH", "ANGLE", "TIME", 
			"FREQ", "DIMENSION", "PERCENTAGE", "NUMBER", "URI", "BADURI", "FUNCTION", 
			"ASTERISK", "EQ", "DOT", "PLUS", "GT", "SLASH", "COMMA", "COLON", "SEMICOLON", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Css22.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Css22Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StyleSheetContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Css22Parser.EOF, 0); }
		public TerminalNode CHARSET_SYM() { return getToken(Css22Parser.CHARSET_SYM, 0); }
		public TerminalNode STRING() { return getToken(Css22Parser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(Css22Parser.SEMICOLON, 0); }
		public List<ImportStmtContext> importStmt() {
			return getRuleContexts(ImportStmtContext.class);
		}
		public ImportStmtContext importStmt(int i) {
			return getRuleContext(ImportStmtContext.class,i);
		}
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public List<TerminalNode> CDO() { return getTokens(Css22Parser.CDO); }
		public TerminalNode CDO(int i) {
			return getToken(Css22Parser.CDO, i);
		}
		public List<TerminalNode> CDC() { return getTokens(Css22Parser.CDC); }
		public TerminalNode CDC(int i) {
			return getToken(Css22Parser.CDC, i);
		}
		public List<RulesetContext> ruleset() {
			return getRuleContexts(RulesetContext.class);
		}
		public RulesetContext ruleset(int i) {
			return getRuleContext(RulesetContext.class,i);
		}
		public List<MediaContext> media() {
			return getRuleContexts(MediaContext.class);
		}
		public MediaContext media(int i) {
			return getRuleContext(MediaContext.class,i);
		}
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public StyleSheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styleSheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterStyleSheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitStyleSheet(this);
		}
	}

	public final StyleSheetContext styleSheet() throws RecognitionException {
		StyleSheetContext _localctx = new StyleSheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_styleSheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHARSET_SYM) {
				{
				setState(50);
				match(CHARSET_SYM);
				setState(51);
				match(STRING);
				setState(52);
				match(SEMICOLON);
				}
			}

			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WSP) | (1L << CDO) | (1L << CDC))) != 0)) {
				{
				{
				setState(55);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WSP) | (1L << CDO) | (1L << CDC))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT_SYM) {
				{
				{
				setState(61);
				importStmt();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CDO || _la==CDC) {
					{
					setState(76);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case CDO:
						{
						setState(62);
						match(CDO);
						setState(66);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WSP) {
							{
							{
							setState(63);
							match(WSP);
							}
							}
							setState(68);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					case CDC:
						{
						setState(69);
						match(CDC);
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WSP) {
							{
							{
							setState(70);
							match(WSP);
							}
							}
							setState(75);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENT) | (1L << HASH) | (1L << PAGE_SYM) | (1L << MEDIA_SYM) | (1L << ASTERISK) | (1L << DOT) | (1L << COLON) | (1L << LBRACKET))) != 0)) {
				{
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENT:
				case HASH:
				case ASTERISK:
				case DOT:
				case COLON:
				case LBRACKET:
					{
					setState(86);
					ruleset();
					}
					break;
				case MEDIA_SYM:
					{
					setState(87);
					media();
					}
					break;
				case PAGE_SYM:
					{
					setState(88);
					page();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CDO || _la==CDC) {
					{
					setState(105);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case CDO:
						{
						setState(91);
						match(CDO);
						setState(95);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WSP) {
							{
							{
							setState(92);
							match(WSP);
							}
							}
							setState(97);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					case CDC:
						{
						setState(98);
						match(CDC);
						setState(102);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WSP) {
							{
							{
							setState(99);
							match(WSP);
							}
							}
							setState(104);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode IMPORT_SYM() { return getToken(Css22Parser.IMPORT_SYM, 0); }
		public TerminalNode SEMICOLON() { return getToken(Css22Parser.SEMICOLON, 0); }
		public TerminalNode STRING() { return getToken(Css22Parser.STRING, 0); }
		public TerminalNode URI() { return getToken(Css22Parser.URI, 0); }
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public MediaListContext mediaList() {
			return getRuleContext(MediaListContext.class,0);
		}
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitImportStmt(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IMPORT_SYM);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(118);
				match(WSP);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==URI) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(125);
				match(WSP);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(131);
				mediaList();
				}
			}

			setState(134);
			match(SEMICOLON);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(135);
				match(WSP);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MediaContext extends ParserRuleContext {
		public TerminalNode MEDIA_SYM() { return getToken(Css22Parser.MEDIA_SYM, 0); }
		public MediaListContext mediaList() {
			return getRuleContext(MediaListContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(Css22Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Css22Parser.RBRACE, 0); }
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public List<RulesetContext> ruleset() {
			return getRuleContexts(RulesetContext.class);
		}
		public RulesetContext ruleset(int i) {
			return getRuleContext(RulesetContext.class,i);
		}
		public MediaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_media; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterMedia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitMedia(this);
		}
	}

	public final MediaContext media() throws RecognitionException {
		MediaContext _localctx = new MediaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_media);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(MEDIA_SYM);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(142);
				match(WSP);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			mediaList();
			setState(149);
			match(LBRACE);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(150);
				match(WSP);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENT) | (1L << HASH) | (1L << ASTERISK) | (1L << DOT) | (1L << COLON) | (1L << LBRACKET))) != 0)) {
				{
				{
				setState(156);
				ruleset();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(RBRACE);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(163);
				match(WSP);
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MediaListContext extends ParserRuleContext {
		public List<MediumContext> medium() {
			return getRuleContexts(MediumContext.class);
		}
		public MediumContext medium(int i) {
			return getRuleContext(MediumContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Css22Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Css22Parser.COMMA, i);
		}
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public MediaListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterMediaList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitMediaList(this);
		}
	}

	public final MediaListContext mediaList() throws RecognitionException {
		MediaListContext _localctx = new MediaListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mediaList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			medium();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(170);
				match(COMMA);
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WSP) {
					{
					{
					setState(171);
					match(WSP);
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177);
				medium();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MediumContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Css22Parser.IDENT, 0); }
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public MediumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_medium; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterMedium(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitMedium(this);
		}
	}

	public final MediumContext medium() throws RecognitionException {
		MediumContext _localctx = new MediumContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_medium);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(IDENT);
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(184);
				match(WSP);
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public TerminalNode PAGE_SYM() { return getToken(Css22Parser.PAGE_SYM, 0); }
		public TerminalNode LBRACE() { return getToken(Css22Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Css22Parser.RBRACE, 0); }
		public List<TerminalNode> WSP() { return getTokens(Css22Parser.WSP); }
		public TerminalNode WSP(int i) {
			return getToken(Css22Parser.WSP, i);
		}
		public PseudoPageContext pseudoPage() {
			return getRuleContext(PseudoPageContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(Css22Parser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(Css22Parser.SEMICOLON, i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Css22Listener ) ((Css22Listener)listener).exitPage(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(PAGE_SYM);
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(191);
				match(WSP);
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(197);
				pseudoPage();
				}
			}

			setState(200);
			match(LBRACE);
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WSP) {
				{
				{
				setState(201);
				match(WSP);
				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(207);
				declaration();
				}
			}
